# s-bridge

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alone.py  collated_graph.dot  docker-compose.yml  entrypoint.sh  essai.py  learning_exercises.md  m_108  m_108.json  main.py  main.py.bak  nlp_server_exercises.md  pyproject.toml  scripts_output.txt  test_metadata.py  test_tokenize_xml.py  tokenize_xml.py
Balises/: Guide_1.5.docx
Le Martyre de Philippe - Acta Philippi/: athous-iviron-450.xml  bonnet_er.xml  ebe_346.xml
api/: dependencies.py  routes.py
clients/: __init__.py  collatex_client.py  dts_client.py  local.py  remote.py  stemmarest_client.py
core/: config.py  database.py  exceptions.py  interfaces.py  logging.py
design/: DESIGN.md  architecture_updates.md  custom_tags_howto.md  discussion_architecture_fr.md  dts_dynamic_urls.md
docs/: benchmark_metrics.md  philip_martyr_benchmark_homemade.md  philip_martyr_benchmark_neworkX.md  philip_martyr_benchmark_summary.json  philip_martyr_benchmark_summary.md  variant_graph_reference_metrics.csv  variant_graph_reference_metrics_dekker_default.csv  variant_graph_reference_metrics_medite.csv  variant_graph_reference_metrics_needleman-wunsch.csv
graveyard/: Dockerfile  ElementTree.py  docker-compose.yml  fix_milestone.py  get_tags.py  milestone_108.json  milestone_108.xml  milestone_108_json_tokens.json  tech_lead_demo.py  tech_lead_demo2.py  tech_lead_demo3.py  test_unclear.py  tokenize_xml.py
helpers/: helpers.py
migrations/: env.py
models/: collatex.py  database.py  (+2 more)
(+65 files in other folders)
