[project]
name = "s-bridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "cltk[stanza]>=2.5.0",
    "fastapi>=0.133.0",
    "lxml>=6.0.2",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "ruff>=0.15.4",
    "stanza>=1.11.0",
    "uvicorn>=0.41.0",
]

[tool.pytest.ini_options]
pythonpath = "."
