[project]
name = "s-bridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "bs4>=0.0.2",
    "cltk[stanza]>=2.5.0",
    "fastapi>=0.133.0",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "networkx>=3.0",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "python-multipart>=0.0.27",
    "requests>=2.32.5",
    "ruff>=0.15.4",
    "sqlmodel>=0.0.38",
    "stanza>=1.11.0",
    "uritemplate>=4.2.0",
    "uvicorn>=0.41.0",
    "torch",
    "transformers>=5.9.0",
]

[tool.pytest.ini_options]
pythonpath = "."

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

